--- a/TimeLimiter/TimeLimiter.csproj
+++ b/TimeLimiter/TimeLimiter.csproj
@@ -13,6 +13,7 @@
     <Copyright>Copyright 2017 Shuai Zhang under GPLv3</Copyright>
     <PackageLicenseUrl>https://www.gnu.org/licenses/gpl-3.0-standalone.html</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/hcoona/TimeLimiter</PackageProjectUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
 </Project>
